8324969: assert(false) failed: Non-balanced monitor enter/exit!